<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="70sp"
        tools:text="Text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="63dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/mainActivityStartText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/leaderboardButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/mainActivityLeaderboardText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="71dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityDifficultyText"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>
